mmish logo theme
Adds a new 'mmish logo and theme to the app

--- a/web/src/app.html
+++ b/web/src/app.html
@@ -2,12 +2,12 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/images/mustachioed-favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
   <!-- scroll-pt leaves space for navbar -->
-  <body data-sveltekit-preload-data="hover" data-theme="skeleton" class="scroll-pt-[100px]">
+  <body data-sveltekit-preload-data="hover" data-theme="mmish-theme" class="scroll-pt-[100px]">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
